# ai-projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/mnist/: Untitled.ipynb  Untitled1.ipynb  mnist_exploration.ipynb
rainier_wildflowers/: rainier_wildflowers.ipynb
src/pytorch_util/: __init__.py  _single_step_trainer.py  model_util.py  neural_network.py  simple_trainer.py
tests/pytorch_util/: test_model_util.py  test_neural_network.py  test_simple_trainer.py  test_single_step_trainer.py  test_util.py
